# annoyodoro

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  packaging.nix  rustfmt.toml
.helix/: languges.toml
annoyodoro/: Cargo.toml
annoyodoro-break-timer/: Cargo.toml
annoyodoro-break-timer/src/: iced_implementation.rs  lib.rs  main.rs  view.rs
annoyodoro-config/: Cargo.toml
annoyodoro-config/src/: default_config.toml  duration.rs  lib.rs
annoyodoro/src/: app.rs  break_time.rs  cli.rs  event.rs  main.rs  state.rs  ui.rs
annoyodoro/src/ui/: keyhints.rs  state.rs
src/: break_timer.rs  circular.rs  cli.rs  config.rs  default_config.toml  icons.rs  lib.rs  main.rs  stats.rs  view.rs  work_timer.rs
