[workspace]
resolver = "2"
members = ["annoyodoro", "annoyodoro-break-timer", "annoyodoro-config"]
default-members = ["annoyodoro"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Tatesa Uradnik <taduradnik@proton.me>"]
description = "An annoying pomodoro timer"
license = "MIT"
homepage = "https://github.com/TadoTheMiner/annoyodoro"
repository = "https://github.com/TadoTheMiner/annoyodoro"
readme = "README.md"
keywords = []
categories = []

[workspace.dependencies]
annoyodoro-break-timer = {path = "./annoyodoro-break-timer", version = "0.1.0"}
annoyodoro-config = {path = "./annoyodoro-config", version = "0.1.0"}
color-eyre = "0.6.4"
serde = { version = "1.0.219", features = ["derive"] }
dirs = "6.0.0"
tap = "1.0.1"
cli-log = "2.1.0"
clap = { version = "4.5.37", features = ["cargo", "derive", "string"] }

[patch.crates-io.iced]
git = 'https://github.com/TadoTheMiner/iced.git'
branch = '0.13'

[patch.crates-io.iced_runtime]
git = 'https://github.com/TadoTheMiner/iced.git'
branch = '0.13'

[patch.crates-io.iced_core]
git = 'https://github.com/TadoTheMiner/iced.git'
branch = '0.13'

[patch.crates-io.iced_renderer]
git = 'https://github.com/TadoTheMiner/iced.git'
branch = '0.13'

[patch.crates-io.iced_futures]
git = 'https://github.com/TadoTheMiner/iced.git'
branch = '0.13'

[patch.crates-io.iced_graphics]
git = 'https://github.com/TadoTheMiner/iced.git'
branch = '0.13'
