[package]
name = "annoyodoro"
version = "0.1.0"
edition = "2024"
authors = ["Tatesa Uradnik <taduradnik@proton.me>"]
description = "An annoying pomodoro timer"
license = "MIT"
homepage = "https://github.com/TadoTheMiner/annoyodoro"
repository = "https://github.com/TadoTheMiner/annoyodoro"
readme = "README.md"
keywords = []
categories = []


[dependencies]
color-eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
dirs = "6.0"
clap = { version = "4.5", features = ["cargo", "derive", "string"] }
figment = { version = "0.10", features = ["toml"] }
time = { version = "0.3", features = ["local-offset", "serde", "std"] }
csscolorparser = "0.7"
bincode = { version = "2.0", features = ["serde"] }
itertools = "0.14"
iced = { git = "https://github.com/iced-rs/iced", features = ["smol"] }
iced_sessionlock.git = "https://github.com/waycrate/exwlshelleventloop/"
smol = "2.0.2"
