[package]
name = "annoyodoro"
version = "0.1.0"
edition = "2024"
authors = ["Tatesa Uradnik <taduradnik@proton.me>"]
description = "An annoying pomodoro timer"
license = "MIT"
homepage = "https://github.com/TadoTheMiner/annoyodoro"
repository = "https://github.com/TadoTheMiner/annoyodoro"
readme = "README.md"
keywords = []
categories = []


[dependencies]
serde = { version = "1.0", features = ["derive"] }
dirs = "6.0"
clap = { version = "4.5", features = ["cargo", "derive", "string"] }
figment = { version = "0.10", features = ["toml"] }
csscolorparser = "0.7"
bincode = { version = "2.0", features = ["serde"] }
itertools = "0.14"
iced = { version = "0.14", features = [
  "smol",
  "wgpu",
  "crisp",
  "wayland",
  "smol",
  "advanced"
], default-features = false }
smol = "2.0.2"
jiff = { version = "0.2.15", features = ["serde"] }
notify-rust = "4.11.7"
mpris = "2.0.1"
lucide-icons = "0.575.0"
yanet = { git = "https://github.com/janTatesa/yanet", version = "0.1.0", features = ["colors"] }
hyozu = { git = "https://github.com/airstrike/hyozu", branch = "0.14", version = "0.1.0" }
iced_layershell = "0.15.1"
sweeten = { git = "https://github.com/airstrike/sweeten", branch = "0.14.0-dev", version = "0.14.0-dev" }
