[package]
name = "annoyodoro-config"
description = "Config for annoyodoro"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
figment = { version = "0.10.19", features = ["toml"] }
colors-transform = "0.2.11"
color-eyre.workspace = true
serde.workspace = true
dirs.workspace = true
tap.workspace = true

