[package]
name = "annoyodoro"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true


[dependencies]
clap.workspace = true
color-eyre.workspace = true
ratatui = "0.29.0"
annoyodoro-break-timer.workspace = true
cli-log.workspace = true
tokio = { version = "1.45.0", features = ["macros", "rt", "rt-multi-thread", "time"] }
crossterm = { version = "0.29.0", features = ["event-stream"], default-features = false }
futures = "0.3.31"
serde_json = "1.0.140"
serde.workspace = true
itertools = "0.14.0"
time = { version = "0.3.41", features = ["local-offset"] }
dirs.workspace = true
tap.workspace = true
annoyodoro-config.workspace = true
